tools/clang/iterator_checker/tests/multiple-error-for-same-source.txt
multiple-error-for-same-source.cpp:11:7: error: [iterator-checker] Potentially invalid iterator used.
  if (it->begin() == v.begin()) {
      ^
multiple-error-for-same-source.cpp:11:7: error: [iterator-checker] Potentially invalid iterator comparison.
2 errors generated.
